# knowledge-graph-of-thoughts

./: .gitignore  CLAUDE.md  PROPOSAL_KGOT_ENHANCEMENT.md  README.md  STREAMLIT_UI_NOTES.md  pyproject.toml  run_multiple_gaia.sh  run_multiple_simpleqa.sh  start_ui.bat  streamlit_app.py  test_tongyiu_research.py
.claude/: settings.local.json
.serena/: project.yml
benchmarks/: gaia.py  simpleqa.py
benchmarks/baselines/: zero_shot.py
containers/falkordb/: docker-compose.yml
docs/: IMPLEMENTATION_PLAN.md  deep-research-agent-enhancement-plan.md
hf-space-python-executor/: Dockerfile  README.md  python_executor.py  requirements.txt
hf-space-python-executor-backup/: README.md
kgot/: .env  __main__.py  api.py  config_llms.template.json  config_tools.template.json
kgot/controller/: README.md
kgot/controller/falkordb/: __init__.py  llm_invocation_base.py
kgot/controller/falkordb/directRetrieve/: __init__.py  controller.py  llm_invocation_handle.py
kgot/controller/falkordb/queryRetrieve/: __init__.py  controller.py  llm_invocation_handle.py
kgot/controller/neo4j/: llm_invocation_base.py
kgot/controller/neo4j/directRetrieve/: controller.py  llm_invocation_handle.py
kgot/controller/neo4j/queryRetrieve/: controller.py  llm_invocation_handle.py
kgot/controller/networkX/: llm_invocation_base.py
kgot/controller/networkX/directRetrieve/: controller.py  llm_invocation_handle.py
kgot/controller/networkX/queryRetrieve/: controller.py  llm_invocation_handle.py
kgot/controller/rdf4j/: llm_invocation_base.py
kgot/controller/rdf4j/queryRetrieve/: controller.py  llm_invocation_handle.py
kgot/knowledge_graph/: README.md
kgot/knowledge_graph/falkordb/: __init__.py  main.py
kgot/prompts/falkordb/: __init__.py  base_prompts.py
kgot/prompts/falkordb/directRetrieve/: __init__.py  prompts.py
kgot/prompts/falkordb/queryRetrieve/: __init__.py  prompts.py
kgot/tools/: PythonCodeTool.py  README.md  base.py  tool_manager_interface.py
kgot/tools/tools_v2_3/: Browser.py  FalkorDBSearchTool.py  GraphVizTool.py  MdConverter.py  PollinationsSearchTool.py  SurferTool.py  TextInspectorTool.py  WikipediaTool.py  tool_manager.py  web_browser.py
kgot/tools/tools_v2_3/TongyiuDeepResearch/: CRITIQUE.md  __init__.py  agent.py  configuration.py  design.md  state.py  tools.py
kgot/utils/: llm_utils.py  tracing.py
