[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kgot"
version = "1.1.0"
authors = [
  { name="Maciej Besta", email="maciej.besta@inf.ethz.ch" },
  { name="Lorenzo Paleari", email="lpaleari@student.ethz.ch" },
  { name="Andrea Jiang", email="jianga@student.ethz.ch" },
  { name="Robert Gerstenberger", email="gerstenberger.robert@gmail.com" },
  { name="You Wu", email="youwuyou@ethz.ch" },
  { name="Ales Kubicek", email="akubicek@student.ethz.ch" },
  { name="Diana Khimey", email="dkhimey@student.ethz.ch" },
  { name="Jón Gunnar Hannesson", email="jhannesson@student.ethz.ch" },
  { name="Haiqiang Zhang", email="zhaiqiang@student.ethz.ch" },
  { name="Tao Zhang", email="zhangta@ethz.ch" },
  { name="Peiran Ma", email="peirma@ethz.ch" }
]
description = "Python package for Knowledge Graph of Thoughts"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "cairosvg", # svg file for ImageQuestion
  "docx2txt",
  "ddgs>=9.11.4",
  "fastapi>=0.111.0",
  "fastparquet==2025.12.0",  
  "faiss-cpu>=1.7.4",
  "flask", # Python tool
  "html5lib>=1.1",
  "huggingface_hub>=0.30.1",
  "kaleido==1.0.0rc13",
  "jq", # json files
  "langchain>=0.2.11",
  "langchain_community>=0.2.10",
  "langchain_core>=0.2.26",
  "langchain_openai>=0.1.20",
  "langchain_mistralai>=0.2.0",
  "langfuse>=2.0.0",
  "lxml>=5.2.2",
  "mammoth>=1.8.0,<2.0.0",
  "markdownify>=0.14.1,<0.15",
  "matplotlib>=3.8.4",
  "neo4j>=5.23.1",
  "falkordb>=0.5.0",
  "networkx", # xlsx files
  "nbformat>=5.10.4",
  "openai>=1.37.1",
  "openpyxl", # xlsx files
  "pandas>=2.2.2",
  "pathvalidate>=3.2.1,<4.0.0",
  "pillow_heif", # png files
  "pymupdf>=1.22.0",
  "pydantic>=2.8.2",
  "pypdf", # pdf files
  "python-dotenv==1.1.0",
  "python-pptx", # pptx files
  "pywikibot>=9.3.0",
  "pdfminer",
  "pdfminer.six", # pdf files
  "plotly",
  "puremagic>=1.27,<2.0",
  "pyvis>=0.3.2",
  "rank-bm25>=0.2.2",
  "rapidocr-onnxruntime",
  "tabulate>=0.9.0",
  "tenacity>=8.3.0",
  "tqdm>=4.66.4",
  "tesseract", # png files
  "transformers>=4.44.2",
  "transformers[torch]",
  "scrapegraphai==1.25.1",
  "unstructured", # pptx and images
  "unstructured_inference", # pptx and images
  "unstructured_pytesseract", # pptx and images
  "wikipedia>=1.4.0",
  "xlrd>=2.0.1", # xls files
  "youtube-transcript-api>=0.6.2",
  # Deep research dependencies
  "crawl4ai>=0.3.0",
  "langgraph>=0.2.0",
  # SurferTool dependencies (smolagents migration)
  "smolagents>=0.1.0",
  "helium>=5.0.0",
  # UI dependencies
  "streamlit-flow-component>=1.5.0,<2.0.0",  # Interactive graph visualization; imported as streamlit_flow
]

# playwright install

[project.urls]
Homepage = "https://github.com/spcl/knowledge-graph-of-thoughts"

[project.scripts]
kgot = "kgot.__main__:main"
